# eligibility-signposting-api

./: .editorconfig  .env  .gitignore  .tool-versions  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/: Dockerfile  dependabot.yaml
.github/actions/create-lines-of-code-report/: action.yaml
.github/actions/scan-dependencies/: action.yaml
.github/workflows/: cicd-1-pull-request.yaml  cicd-2-publish.yaml  cicd-3-deploy.yaml  cicd-4-test.yaml  deploy-stacks.yml  github-oidc-test.yaml  manual-terraform-plan.yaml  stage-1-commit.yaml  stage-2-test.yaml  stage-3-build.yaml  stage-4-acceptance.yaml
docs/: template-repository-guides.md
infrastructure/: .gitignore  Makefile
infrastructure/modules/_shared/: default_variables.tf
infrastructure/modules/api_gateway/: api_gateway.tf  cloudwatch.tf  iam.tf  kms.tf  outputs.tf  providers.tf  variables.tf
infrastructure/modules/dynamodb/: dynamodb.tf  kms.tf  outputs.tf  variables.tf
infrastructure/modules/kinesis_firehose/: kinesis_firehose_delivery_stream.tf  kms.tf  outputs.tf  variables.tf
infrastructure/modules/lambda/: kms.tf  lambda.tf  outputs.tf  variables.tf
infrastructure/modules/s3/: kms.tf  outputs.tf  s3.tf  variables.tf
infrastructure/stacks/_shared/: default_variables.tf  iams_permissions_boundary.tf  locals.tf
infrastructure/stacks/api-layer/: api_gateway.tf  assumed_role_permissions_boundary.tf  cloudwatch.tf  cloudwatch_metrics.tf  data.tf  dynamodb.tf  healthcheck_status.tf  iam_policies.tf  iam_roles.tf  iams_permissions_boundary.tf  kinesis_firehose.tf  lambda.tf  locals.tf  patient_check.tf  provider.tf  s3_buckets.tf  truststore_s3_bucket.tf
infrastructure/stacks/bootstrap/: README.md  locals.tf  modules.tf  provider.tf
infrastructure/stacks/iams-developer-roles/: README.md  github_actions_policies.tf  github_actions_role.tf  iams_permissions_boundary.tf  locals.tf  outputs.tf  state.tf  terraform_developer_policies.tf  terraform_developer_role.tf  variables.tf
infrastructure/stacks/iams-development-roles/: README.md  terraform_developer_role.tf
infrastructure/stacks/iams-roles/: terraform_developer_role.tf  variables.tf
infrastructure/stacks/networking/: README.md  acm_certificates.tf  data.tf  internet_gateway.tf  kms.tf  locals.tf  nat_gateways.tf  network_acls.tf  route_tables.tf  ssm.tf  ssm_key.tf  state.tf  subnets.tf  variables.tf  vpc.tf  vpc_endpoints.tf  vpc_flow_logs.tf
sandbox/: Dockerfile  HealthStatusEndpoint.json  Makefile  README.md  app.js  app.py  app.spec.js  docker-compose.yaml  package.json  pyproject.toml  supervisord.conf
sandbox/tests/: app_tests.py
scripts/: dependencies.sh
scripts/config/: gitleaks.toml  pre-commit.yaml  sonar-scanner.properties
scripts/manual_uploads/: manual_config_upload.sh  manual_config_upload_test.sh  manual_dynamo_upload.sh  manual_dynamo_upload_test.sh  manual_s3_dynamo_upload.py
scripts/tests/: integration.sh  lint.sh  unit.sh
specification/: README.md  eligibility-signposting-api.yaml
specification/.proxygen/: credentials.yaml  settings.yaml
specification/components/security/: security-sandbox.yaml  security-template.yaml  security.yaml
specification/postman/: Dockerfile
specification/proxygen-cli/: README.md
specification/x-nhsd-apim/: access-template.yaml  access.yaml  ratelimit-template.yaml  ratelimit.yaml  target-sandbox.yaml  target-template.yaml  target.yaml
src/eligibility_signposting_api/: app.py  config.py  error_handler.py  wrapper.py
src/eligibility_signposting_api/config/: config.py  contants.py
src/eligibility_signposting_api/model/: eligibility.py  person.py  rules.py
src/eligibility_signposting_api/repos/: __init__.py  campaign_repo.py  eligibility_repo.py  exceptions.py  factory.py  person_repo.py  rules_repo.py
src/eligibility_signposting_api/services/: __init__.py  audit_service.py  eligibility_services.py  person_services.py
src/eligibility_signposting_api/views/: __init__.py  eligibility.py  hello.py  response_models.py
tests/: conftest.py  docker-compose.yml
tests/e2e/: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
tests/e2e/data/: generate_dynamo_data.py
tests/e2e/data/configs/: global_config.json
tests/e2e/data/dynamoDB/: AUTO_RSV_SB_001.json  AUTO_RSV_SB_002.json  AUTO_RSV_SB_003.json  AUTO_RSV_SB_004.json  AUTO_RSV_SB_005.json  AUTO_RSV_SB_006.json  AUTO_RSV_SB_007.json  AUTO_RSV_SB_008.json  AUTO_RSV_SB_009.json  AUTO_RSV_SB_010.json  AUTO_RSV_SB_011.json  AUTO_RSV_SB_012.json  AUTO_RSV_SB_013.json  AUTO_RSV_SB_014.json  test_data.json
tests/e2e/data/responses/: AUTO_RSV_SB_001.json  AUTO_RSV_SB_002.json  AUTO_RSV_SB_003.json  AUTO_RSV_SB_004.json  AUTO_RSV_SB_005.json  AUTO_RSV_SB_007.json  AUTO_RSV_SB_008.json  AUTO_RSV_SB_009.json  AUTO_RSV_SB_010.json  AUTO_RSV_SB_011.json  AUTO_RSV_SB_012.json  AUTO_RSV_SB_013.json  AUTO_RSV_SB_014.json
tests/e2e/data/s3/: patient_s3_sample.json
tests/e2e/features/: conftest.py  environment.py
tests/e2e/features/eligibility_check/: eligibility_check.feature  real_api_integration.feature
tests/e2e/features/steps/: eligibility_check_steps.py  mtls_steps.py
tests/e2e/tests/: conftest.py
tests/e2e/tests/eligibility_signposting/: conftest.py  test_eligibility_check.py  test_eligibility_check_bdd.py
tests/e2e/utils/: api_client.py  config.py  data_loader.py  mtls.py
tests/fixtures/builders/: providers.py
tests/fixtures/matchers/: eligibility.py
tests/integration/: conftest.py  test_app_running_as_lambda.py  test_flask_app.py
tests/integration/in_process/: test_eligibility_endpoint.py  test_hello_world_endpoint.py
tests/integration/lambda/: test_app_running_as_lambda.py
tests/integration/repo/: test_campaign_repo.py  test_eligibility_repo.py  test_person_repo.py  test_rules_repo.py
tests/test_data/test_config/: test_config.json
tests/test_data/test_records/: test_cohort_records.json
tests/unit/: test_config.py  test_goes_here.py
tests/unit/model/: test_rules.py
tests/utils/: builders.py  manual_s3_dynamo_upload_tests.py
(+44 files in other folders)
