[project]
name = "eligibility-signposting-api"
version = "0.0.1-alpha"
description = "TODO"
authors = [
  #TODO add authors
]
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["classifiers", "dependencies"]
repository = "https://github.com/NHSDigital/eligibility-signposting-api"
homepage = "https://digital.nhs.uk/developer/api-catalogue"
keywords = ["healthcare", "uk", "nhs", "vaccination", "api"] #TODO add additional keywords

[tool.poetry]
packages = [{include = "eligibility_signposting_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.13"
flask = {extras = ["async"], version = "^3.1.0"}
httpx = "^0.28.1"
yarl = "^1.18.3"
pydantic = "^2.10.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.4"
gitpython = "^3.1.44"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"
#pytest-nhsd-apim = "^3.3.2"
aiohttp = "^3.11.12"
awscli = "^1.37.24"
awscli-local = "^0.22.0"
pyhamcrest = "^2.1.0"
factory-boy = "^3.3.3"
pyright = "^1.1.394"

[tool.ruff]
line-length = 120
exclude = ["docs/", "scripts/"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "INP", "S101"]

[tool.pyright]
include = ["src/"]
pythonVersion = "3.13"
