[project]
name = "sandbox"
version = "0.1.0"
description = "Eligibility Sandbox API"
authors = [
    {name = "Edd Almond",email = "edd.almond1@nhs.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "requests (>=2.31.0,<3.0.0)",
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pyhamcrest = "^2.1.0"
